--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
     </div>
   </div>
 
-  <script>
-    // JavaScript here...
-  </script>
+  <script src = "script.js"> </script>
 </body>
 </html>
