--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <ul id="todolist">
       <li class="todo">
-        <input id="todo-1" type="checkbox" value="1" onChange = "toggleDone.bind(this)">
+        <input id="todo-1" type="checkbox" value="1" onChange = "toggleDone.bind(this)()">
         <label for="todo-1">Sweep the floor</label>
       </li>
       <li class="todo completed">
-        <input id="todo-2" type="checkbox" value="1" checked onChange = "toggleDone.bind(this)">
+        <input id="todo-2" type="checkbox" value="1" checked = "checked" onChange = "toggleDone.bind(this)()">
         <label for="todo-2">Dust the vases</label>
       </li>
     </ul>
